added more opcodes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ SET (SOURCES
 	srcs/execute.c
 	srcs/init_cpu.c
 	srcs/init_op_tab.c
+	srcs/memory.c
 	srcs/instructions/jp.c
 	srcs/instructions/ld.c
 	srcs/instructions/misc.c
