--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
 		"stdio.h": "c",
 		"sdl.h": "c",
-		"gb.h": "c"
+		"gb.h": "c",
+		"op.h": "c",
+		"ext_op.h": "c"
 	}
 }
