forget what i said -- interrupts work even less

--- a/rom/srcs/Hello_World/Makefile
+++ b/rom/srcs/Hello_World/Makefile
@@ -6,7 +6,7 @@
 #    By: niragne <niragne@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/01/27 15:27:42 by niragne           #+#    #+#              #
-#    Updated: 2020/01/27 18:15:02 by niragne          ###   ########.fr        #
+#    Updated: 2020/03/30 19:07:01 by niragne          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,14 +22,15 @@ OBJ_DIR = obj
 SRC = $(addprefix $(SRC_DIR)/, $(SRCS))
 OBJ = $(addprefix $(OBJ_DIR)/, $(OBJS))
 
-AS = ~/.brew/bin/rgbasm
-LINKER = ~/.brew/bin/rgblink
+AS = rgbasm
+LINKER = rgblink
 ASFLAGS = 
-
 
 $(NAME): $(OBJ)
 	$(LINKER) -o $(NAME) $(OBJ)	
 
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.asm
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.asm $(OBJ_DIR)
 	$(AS) -o $@ $(CFLAGS) -i $(INC_DIR)/ $<
 
+$(OBJ_DIR):
+	mkdir $(OBJ_DIR)
