all opcodes are implemented and should work properly (all tests passed except for interrupts). now on to the serious stuff...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ SET (SOURCES
 	srcs/instructions/rlc.c
 	srcs/instructions/bit.c
 	srcs/instructions/res.c
+	srcs/instructions/set.c
 	srcs/instructions/swap.c
 	)
 
