--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ SET (SOURCES
 	srcs/breakpoints.c
 	srcs/main_window_loop.c
 	srcs/handle_joypad.c
+	srcs/save_game.c
 	srcs/instructions/jp.c
 	srcs/instructions/ld.c
 	srcs/instructions/misc.c
