fixed smooth window moving

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ SET (SOURCES
 	srcs/handle_joypad.c
 	srcs/save_game.c
 	srcs/palette.c
+	srcs/userscreen.c
 	srcs/instructions/jp.c
 	srcs/instructions/ld.c
 	srcs/instructions/misc.c
