added better mbc handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ SET (SOURCES
 	srcs/handle_joypad.c
 	srcs/save_game.c
 	srcs/palette.c
+	srcs/mbc1.c
+	srcs/mbc2.c
+	srcs/mbc5.c
 	srcs/userscreen.c
 	srcs/instructions/jp.c
 	srcs/instructions/ld.c
