--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ message (${SDL2_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(includes)
 
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g3")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3")
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
