--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ SET (SOURCES
 	srcs/mbc3.c
 	srcs/mbc5.c
 	srcs/userscreen.c
+	srcs/savestate.c
 	srcs/instructions/jp.c
 	srcs/instructions/ld.c
 	srcs/instructions/misc.c
@@ -84,8 +85,8 @@ message (${SDL2_INCLUDE_DIRS})
 
 INCLUDE_DIRECTORIES(includes)
 
-set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g3 -fsanitize=address")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 -fsanitize=address")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -g3 ")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 ")
 
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
