--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-build/Makefile
+build/
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
