rough implementation of DIV & TIMA registers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,8 @@ set(SOURCES
 	srcs/errors.c
 	srcs/userscreen.c
 	srcs/savestate.c
+	srcs/timer.c
+	srcs/div.c
 	srcs/instructions/jp.c
 	srcs/instructions/ld.c
 	srcs/instructions/misc.c
