--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ list(APPEND SOURCES
 	srcs/renderer/background.cpp
 	srcs/renderer/window.cpp
 	srcs/renderer/sprites.cpp
+	srcs/renderer/rescale.cpp
 	srcs/renderer/gl_utils/compile_program.cpp
 	srcs/renderer/wrapper_c/wrapper.cpp)
 
@@ -109,6 +110,7 @@ list(APPEND HEADERS
 	srcs/renderer/background.h
 	srcs/renderer/window.h
 	srcs/renderer/sprites.h
+	srcs/renderer/rescale.h
 	srcs/renderer/gl_utils/compile_program.h
 	srcs/renderer/wrapper_c/wrapper.h)
 
@@ -118,7 +120,9 @@ set(SHADERS
 	srcs/renderer/shaders/window.vert
 	srcs/renderer/shaders/window.frag
 	srcs/renderer/shaders/sprites.vert
-	srcs/renderer/shaders/sprites.frag)
+	srcs/renderer/shaders/sprites.frag
+	srcs/renderer/shaders/basic.vert
+	srcs/renderer/shaders/basic.frag)
 
 # Debugger
 
