Separate debugger sources from normal sources for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,7 +126,7 @@ set(SHADERS
 
 # Debugger
 
-list(APPEND SOURCES
+set(DEBUGGER_SOURCES
 	srcs/debugger/DebuggerContext.cpp
 	srcs/debugger/DebuggerGrammar.cpp
 	srcs/debugger/SymbolNonTerminalAndOr.cpp
