--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,11 @@ set(SHADERS
 set(DEBUGGER_SOURCES
 	srcs/debugger/libyacc_wrapper.cpp
 	srcs/debugger/DebuggerContext.cpp
+	srcs/debugger/Debugger.cpp
+	srcs/debugger/History.cpp
+	srcs/debugger/DebuggerVariable.cpp
+	srcs/debugger/DebuggerVariableValue.cpp
+	srcs/debugger/DebuggerVariableConstValue.cpp
 	srcs/debugger/DebuggerGrammar.cpp
 	srcs/debugger/PrintCommandSuffixParams.cpp
 	srcs/debugger/SymbolNonTerminalAndOr.cpp
@@ -163,7 +168,6 @@ set(DEBUGGER_SOURCES
 	srcs/debugger/SymbolNonTerminalSetCommand.cpp
 	srcs/debugger/SymbolNonTerminalStepCommand.cpp
 	srcs/debugger/SymbolNonTerminalTerm.cpp
-	srcs/debugger/SymbolNonTerminalUnit.cpp
 	srcs/debugger/SymbolNonTerminalUnwatchCommand.cpp
 	srcs/debugger/SymbolNonTerminalValue.cpp
 	srcs/debugger/SymbolNonTerminalVariable.cpp
@@ -242,6 +246,12 @@ set(DEBUGGER_SOURCES
 	list(APPEND HEADERS
 	includes/debugger/libyacc_wrapper.h
 	includes/debugger/PrintCommandSuffixParams.hpp
+	includes/debugger/Debugger.hpp
+	includes/debugger/History.hpp
+	includes/debugger/DebuggerVariable.hpp
+	includes/debugger/DebuggerVariableAddress.hpp
+	includes/debugger/DebuggerVariableValue.hpp
+	includes/debugger/DebuggerVariableConstValue.hpp
 	includes/debugger/DebuggerContext.hpp
 	includes/debugger/DebuggerGrammar.hpp
 	includes/debugger/SymbolNonTerminalAndOr.hpp
@@ -267,7 +277,6 @@ set(DEBUGGER_SOURCES
 	includes/debugger/SymbolNonTerminalSetCommand.hpp
 	includes/debugger/SymbolNonTerminalStepCommand.hpp
 	includes/debugger/SymbolNonTerminalTerm.hpp
-	includes/debugger/SymbolNonTerminalUnit.hpp
 	includes/debugger/SymbolNonTerminalUnwatchCommand.hpp
 	includes/debugger/SymbolNonTerminalValue.hpp
 	includes/debugger/SymbolNonTerminalVariable.hpp
@@ -348,8 +357,6 @@ include_directories(includes)
 include_directories(includes/debugger)
 include_directories(libyacc/includes)
 include_directories(${Readline_INCLUDE_DIR})
-
-
 
 ################################################
 #                COMPILE FLAGS                 #
