Split VRAM banks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,10 +78,10 @@ set(SOURCES
 	srcs/gpu.c
 	srcs/cpu_toggle_flag.c
 	srcs/init_sdl.c
-	srcs/video_loop.c
-	srcs/vram_viewer.c
+	# srcs/video_loop.c
+	# srcs/vram_viewer.c
 	srcs/tools.c
-	srcs/tile.c
+	# srcs/tile.c
 	srcs/breakpoints.c
 	srcs/main_window_loop.c
 	srcs/input_functions.c
@@ -95,7 +95,7 @@ set(SOURCES
 	srcs/mbc3.c
 	srcs/mbc5.c
 	srcs/errors.c
-	srcs/userscreen.c
+	# srcs/userscreen.c
 	srcs/savestate.c
 	srcs/timer.c
 	srcs/write.c
