--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,6 @@
 		"typeinfo": "cpp",
 		"bit": "cpp",
 		"mbc.h": "c"
-	}
+	},
+	"C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
