--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,11 @@
             "request": "launch",
             // Resolved by CMake Tools:
             "program": "${workspaceFolder}/build/gbmu",
-            "args": ["${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb"],
-            "stopAtEntry": true,
+            "args": [
+                "${workspaceFolder}/rom/Legend_of_Zelda_link_Awaking.gb"
+            ],
+            "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build",
-            "console: "integratedTerminal",
             "MIMode": "gdb",
             "setupCommands": [
                 {
@@ -18,7 +19,8 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 }
-            ]
+            ],
+            "console": "integratedTerminal",
         },
         {
             "name": "C++ Launch (Windows)",
@@ -37,12 +39,14 @@
                 }
             ],
             "logging": {
-              "moduleLoad": false,
-              "trace": true
+                "moduleLoad": false,
+                "trace": true
             },
-            "args": ["${workspaceFolder}/rom/tetris.gb"],
+            "args": [
+                "${workspaceFolder}/rom/tetris.gb"
+            ],
             "visualizerFile": "${workspaceFolder}/my.natvis",
             "showDisplayString": true,
-          }
+        }
     ]
 }
